<resources>
    <string name="app_name">Gass.App</string>
    <string name="img_Logo">Logo</string>
    <string name="txt_Correo">Correo electronico</string>
    <string name="txt_Pass">Contraseña</string>
    <string name="btn_Iniciar">Iniciar sesión</string>
    <string name="tv_Register">Si no tienes una cuenta</string>
    <string name="tv_Registrar">Registrate aquí</string>
    <string name="tv_Registrate">Registrate</string>
    <string name="txt_Nombres">Nombres</string>
    <string name="txt_Apellidos">Apellidos</string>
    <string name="txt_PassConfirm">Confirmar contraseña</string>
    <string name="txt_Tel">Telefono</string>
    <string name="btn_Registrarme">Registrarme</string>
    <string name="TOKEN">sk.eyJ1IjoiZGVpdmkxNzI4IiwiYSI6ImNrN2dsMGRnejAwcjYzZHBhdDhiZXBhczIifQ.uAwuwberR_GzIrEtR-y_ng</string>
    <string name="tv_Volver">Volver</string>
    <string name="Item_perfil">Perfil</string>
    <string name="Item_config">Configuración</string>
    <string name="Item_logout">Cerrar sesión</string>
    <string name="drawerOpen">draweOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="Item_tarjetas">Mis tarjetas</string>
    <string name="Item_historial">Historial de compra</string>
    <string name="Item_terminos">Terminos y condiciones</string>
    <string name="Item_about">Acerga de Gass.App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
